Updating LD Values in WIP System & Getting All values

--- a/Assets/Resources/lang/11.json
+++ b/Assets/Resources/lang/11.json
@@ -1,1 +1,1 @@
-{"id":76,"name":"11","textsDictionary":[{"key":"Orders Count","value":"3"}]}
+{"id":76,"name":"11","textsDictionary":[{"key":"Duration","value":"110"},{"key":"Orders Count","value":"3"},{"key":"Trains Count","value":"3"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
