--- a/Assets/Resources/lang/13.json
+++ b/Assets/Resources/lang/13.json
@@ -1,1 +1,1 @@
-{"id":78,"name":"13","textsDictionary":[{"key":"Orders Count","value":"3"}]}
+{"id":78,"name":"13","textsDictionary":[{"key":"Duration","value":"90"},{"key":"Orders Count","value":"3"},{"key":"Trains Count","value":"2"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
