--- a/Assets/Resources/lang/15.json
+++ b/Assets/Resources/lang/15.json
@@ -1,1 +1,1 @@
-{"id":80,"name":"15","textsDictionary":[{"key":"Orders Count","value":"4"}]}
+{"id":80,"name":"15","textsDictionary":[{"key":"Duration","value":"180"},{"key":"Orders Count","value":"4"},{"key":"Trains Count","value":"4"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
