--- a/Assets/Resources/lang/18.json
+++ b/Assets/Resources/lang/18.json
@@ -1,1 +1,1 @@
-{"id":83,"name":"18","textsDictionary":[{"key":"Orders Count","value":"3"}]}
+{"id":83,"name":"18","textsDictionary":[{"key":"Duration","value":"140"},{"key":"Orders Count","value":"3"},{"key":"Trains Count","value":"4"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
