--- a/Assets/Resources/lang/20.json
+++ b/Assets/Resources/lang/20.json
@@ -1,1 +1,1 @@
-{"id":85,"name":"20","textsDictionary":[]}
+{"id":85,"name":"20","textsDictionary":[{"key":"Duration","value":"100"},{"key":"Orders Count","value":"2"},{"key":"Trains Count","value":"2"},{"key":"Boats Count","value":"1"},{"key":"Errors","value":"0"}]}
