--- a/Assets/Resources/lang/21.json
+++ b/Assets/Resources/lang/21.json
@@ -1,1 +1,1 @@
-{"id":86,"name":"21","textsDictionary":[]}
+{"id":86,"name":"21","textsDictionary":[{"key":"Duration","value":"80"},{"key":"Orders Count","value":"3"},{"key":"Trains Count","value":"2"},{"key":"Boats Count","value":"1"},{"key":"Errors","value":"0"}]}
