--- a/Assets/Resources/lang/23.json
+++ b/Assets/Resources/lang/23.json
@@ -1,1 +1,1 @@
-{"id":88,"name":"23","textsDictionary":[]}
+{"id":88,"name":"23","textsDictionary":[{"key":"Duration","value":"105"},{"key":"Orders Count","value":"4"},{"key":"Trains Count","value":"3"},{"key":"Boats Count","value":"1"},{"key":"Errors","value":"1"}]}
