--- a/Assets/Resources/lang/3.json
+++ b/Assets/Resources/lang/3.json
@@ -1,1 +1,1 @@
-{"id":68,"name":"3","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"1"},{"key":"Trains Count","value":"1"}]}
+{"id":68,"name":"3","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"1"},{"key":"Trains Count","value":"1"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
