--- a/Assets/Resources/lang/33.json
+++ b/Assets/Resources/lang/33.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"33","textsDictionary":[]}
+{"id":65,"name":"33","textsDictionary":[{"key":"Duration","value":"40"},{"key":"Orders Count","value":"[1,2]"},{"key":"Trains Count","value":"[2,2]"},{"key":"Boats Count","value":"NO"},{"key":"Errors","value":"3"}]}
