--- a/Assets/Resources/lang/34.json
+++ b/Assets/Resources/lang/34.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"34","textsDictionary":[]}
+{"id":65,"name":"34","textsDictionary":[{"key":"Duration","value":"40"},{"key":"Orders Count","value":"[2,3]"},{"key":"Trains Count","value":"[3,3]"},{"key":"Boats Count","value":"NO"},{"key":"Errors","value":"3"}]}
