--- a/Assets/Resources/lang/43.json
+++ b/Assets/Resources/lang/43.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"43","textsDictionary":[]}
+{"id":65,"name":"43","textsDictionary":[{"key":"Duration","value":"75"},{"key":"Orders Count","value":"[3,5]"},{"key":"Trains Count","value":"[3,8]"},{"key":"Boats Count","value":"NO"},{"key":"Errors","value":"3"}]}
