--- a/Assets/Resources/lang/44.json
+++ b/Assets/Resources/lang/44.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"44","textsDictionary":[]}
+{"id":65,"name":"44","textsDictionary":[{"key":"Duration","value":"55"},{"key":"Orders Count","value":"[3,4]"},{"key":"Trains Count","value":"[4,6]"},{"key":"Boats Count","value":"NO"},{"key":"Errors","value":"3"}]}
