--- a/Assets/Resources/lang/49.json
+++ b/Assets/Resources/lang/49.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"49","textsDictionary":[]}
+{"id":65,"name":"49","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"[3,5]"},{"key":"Trains Count","value":"[4,6]"},{"key":"Boats Count","value":"NO"},{"key":"Errors","value":"3"}]}
