--- a/Assets/Resources/lang/50.json
+++ b/Assets/Resources/lang/50.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"50","textsDictionary":[]}
+{"id":65,"name":"50","textsDictionary":[{"key":"Duration","value":"80"},{"key":"Orders Count","value":"[3,6]"},{"key":"Trains Count","value":"[6,8]"},{"key":"Boats Count","value":"NO"},{"key":"Errors","value":"3"}]}
