--- a/Assets/Resources/lang/7.json
+++ b/Assets/Resources/lang/7.json
@@ -1,1 +1,1 @@
-{"id":72,"name":"7","textsDictionary":[{"key":"Orders Count","value":"2"}]}
+{"id":72,"name":"7","textsDictionary":[{"key":"Duration","value":"90"},{"key":"Orders Count","value":"2"},{"key":"Trains Count","value":"2"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
