--- a/Assets/Resources/lang/10.json
+++ b/Assets/Resources/lang/10.json
@@ -1,1 +1,1 @@
-{"id":75,"name":"10","textsDictionary":[{"key":"Orders Count","value":"2"}]}
+{"id":75,"name":"10","textsDictionary":[{"key":"Duration","value":"130"},{"key":"Orders Count","value":"2"},{"key":"Trains Count","value":"3"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
