--- a/Assets/Resources/lang/16.json
+++ b/Assets/Resources/lang/16.json
@@ -1,1 +1,1 @@
-{"id":81,"name":"16","textsDictionary":[{"key":"Orders Count","value":"1"}]}
+{"id":81,"name":"16","textsDictionary":[{"key":"Duration","value":"80"},{"key":"Orders Count","value":"1"},{"key":"Trains Count","value":"2"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
