--- a/Assets/Resources/lang/17.json
+++ b/Assets/Resources/lang/17.json
@@ -1,1 +1,1 @@
-{"id":82,"name":"17","textsDictionary":[{"key":"Orders Count","value":"2"}]}
+{"id":82,"name":"17","textsDictionary":[{"key":"Duration","value":"80"},{"key":"Orders Count","value":"2"},{"key":"Trains Count","value":"3"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
