--- a/Assets/Resources/lang/2.json
+++ b/Assets/Resources/lang/2.json
@@ -1,1 +1,1 @@
-{"id":67,"name":"2","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"1"},{"key":"Trains Count","value":"1"}]}
+{"id":67,"name":"2","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"1"},{"key":"Trains Count","value":"1"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
