--- a/Assets/Resources/lang/28.json
+++ b/Assets/Resources/lang/28.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"28","textsDictionary":[]}
+{"id":65,"name":"28","textsDictionary":[{"key":"Duration","value":"80"},{"key":"Orders Count","value":"5"},{"key":"Trains Count","value":"3"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
