--- a/Assets/Resources/lang/4.json
+++ b/Assets/Resources/lang/4.json
@@ -1,1 +1,1 @@
-{"id":69,"name":"4","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"2"},{"key":"Trains Count","value":"1"}]}
+{"id":69,"name":"4","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"2"},{"key":"Trains Count","value":"1"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
