--- a/Assets/Resources/lang/40.json
+++ b/Assets/Resources/lang/40.json
@@ -1,1 +1,1 @@
-{"id":65,"name":"40","textsDictionary":[]}
+{"id":65,"name":"40","textsDictionary":[{"key":"Duration","value":"60"},{"key":"Orders Count","value":"[3,4]"},{"key":"Trains Count","value":"[4,6]"},{"key":"Boats Count","value":"NO"},{"key":"Errors","value":"3"}]}
