--- a/Assets/Resources/lang/6.json
+++ b/Assets/Resources/lang/6.json
@@ -1,1 +1,1 @@
-{"id":71,"name":"6","textsDictionary":[{"key":"Orders Count","value":"2"}]}
+{"id":71,"name":"6","textsDictionary":[{"key":"Duration","value":"110"},{"key":"Orders Count","value":"2"},{"key":"Trains Count","value":"2"},{"key":"Boats Count","value":"0"},{"key":"Errors","value":"0"}]}
